// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton renders Skeleton correctly 1`] = `
<Skeleton
  className=""
  endColor="#A0AEC0"
  isLoaded={false}
  speed={0.8}
  startColor="#EDF2F7"
  style={Object {}}
>
  <WithMooskinContext
    className=""
    endColor="#A0AEC0"
    isLoaded={false}
    speed={0.8}
    startColor="#EDF2F7"
    style={Object {}}
  >
    <Component
      className=""
      endColor="#A0AEC0"
      isLoaded={false}
      palette={
        Object {
          "backgroundColors": Object {
            "button": "#3fbaca",
            "common": "#ffffff",
            "disabledButton": "#e2e2e2",
            "main": "#f7f7f7",
            "secondaryToggle": "#ffffff",
            "toggle": "#425579",
          },
          "borderColors": Object {
            "common": "#e2e2e2",
          },
          "fontColors": Object {
            "anchor": "#3fbaca",
            "button": "#ffffff",
            "common": "#293346",
            "description": "#9d9d9d",
            "disabledAnchor": "#9d9d9d",
            "label": "#2d2d2d",
            "secondaryToggle": "#9d9d9d",
            "toggle": "#ffffff",
          },
        }
      }
      speed={0.8}
      startColor="#EDF2F7"
      style={Object {}}
    >
      <StyledSkeleton
        className=""
        endColor="#A0AEC0"
        isLoaded={false}
        palette={
          Object {
            "backgroundColors": Object {
              "button": "#3fbaca",
              "common": "#ffffff",
              "disabledButton": "#e2e2e2",
              "main": "#f7f7f7",
              "secondaryToggle": "#ffffff",
              "toggle": "#425579",
            },
            "borderColors": Object {
              "common": "#e2e2e2",
            },
            "fontColors": Object {
              "anchor": "#3fbaca",
              "button": "#ffffff",
              "common": "#293346",
              "description": "#9d9d9d",
              "disabledAnchor": "#9d9d9d",
              "label": "#2d2d2d",
              "secondaryToggle": "#9d9d9d",
              "toggle": "#ffffff",
            },
          }
        }
        speed={0.8}
        startColor="#EDF2F7"
        style={Object {}}
      >
        <Box
          className="sc-gtssRu sc-dlnjPT bXZZG iCAzTS"
          endColor="#A0AEC0"
          isLoaded={false}
          palette={
            Object {
              "backgroundColors": Object {
                "button": "#3fbaca",
                "common": "#ffffff",
                "disabledButton": "#e2e2e2",
                "main": "#f7f7f7",
                "secondaryToggle": "#ffffff",
                "toggle": "#425579",
              },
              "borderColors": Object {
                "common": "#e2e2e2",
              },
              "fontColors": Object {
                "anchor": "#3fbaca",
                "button": "#ffffff",
                "common": "#293346",
                "description": "#9d9d9d",
                "disabledAnchor": "#9d9d9d",
                "label": "#2d2d2d",
                "secondaryToggle": "#9d9d9d",
                "toggle": "#ffffff",
              },
            }
          }
          speed={0.8}
          startColor="#EDF2F7"
          style={Object {}}
        >
          <Component
            className="sc-gtssRu sc-dlnjPT bXZZG iCAzTS"
            endColor="#A0AEC0"
            isLoaded={false}
            palette={
              Object {
                "backgroundColors": Object {
                  "button": "#3fbaca",
                  "common": "#ffffff",
                  "disabledButton": "#e2e2e2",
                  "main": "#f7f7f7",
                  "secondaryToggle": "#ffffff",
                  "toggle": "#425579",
                },
                "borderColors": Object {
                  "common": "#e2e2e2",
                },
                "fontColors": Object {
                  "anchor": "#3fbaca",
                  "button": "#ffffff",
                  "common": "#293346",
                  "description": "#9d9d9d",
                  "disabledAnchor": "#9d9d9d",
                  "label": "#2d2d2d",
                  "secondaryToggle": "#9d9d9d",
                  "toggle": "#ffffff",
                },
              }
            }
            speed={0.8}
            startColor="#EDF2F7"
            style={Object {}}
          >
            <StyledBox
              className="sc-gtssRu sc-dlnjPT bXZZG iCAzTS"
              endColor="#A0AEC0"
              isLoaded={false}
              palette={
                Object {
                  "backgroundColors": Object {
                    "button": "#3fbaca",
                    "common": "#ffffff",
                    "disabledButton": "#e2e2e2",
                    "main": "#f7f7f7",
                    "secondaryToggle": "#ffffff",
                    "toggle": "#425579",
                  },
                  "borderColors": Object {
                    "common": "#e2e2e2",
                  },
                  "fontColors": Object {
                    "anchor": "#3fbaca",
                    "button": "#ffffff",
                    "common": "#293346",
                    "description": "#9d9d9d",
                    "disabledAnchor": "#9d9d9d",
                    "label": "#2d2d2d",
                    "secondaryToggle": "#9d9d9d",
                    "toggle": "#ffffff",
                  },
                }
              }
              speed={0.8}
              startColor="#EDF2F7"
              style={Object {}}
            >
              <div
                className="sc-bdnylx sJSbd sc-gtssRu sc-dlnjPT bXZZG iCAzTS"
                speed={0.8}
                style={Object {}}
              >
                <div
                  key="0"
                  style={
                    Object {
                      "backgroundColor": "red",
                      "height": 40,
                      "width": 40,
                    }
                  }
                />
                ,
                <div
                  key="1"
                  style={
                    Object {
                      "backgroundColor": "green",
                      "height": 40,
                      "width": 40,
                    }
                  }
                />
                ,
                <div
                  key="2"
                  style={
                    Object {
                      "backgroundColor": "blue",
                      "height": 40,
                      "width": 40,
                    }
                  }
                />
              </div>
            </StyledBox>
          </Component>
        </Box>
      </StyledSkeleton>
    </Component>
  </WithMooskinContext>
</Skeleton>
`;

exports[`Skeleton renders SkeletonCircle correctly 1`] = `
<Skeleton
  className=""
  endColor="#A0AEC0"
  isLoaded={false}
  size="20px"
  speed={0.8}
  startColor="#EDF2F7"
  style={Object {}}
>
  <WithMooskinContext
    className=""
    endColor="#A0AEC0"
    isLoaded={false}
    size="20px"
    speed={0.8}
    startColor="#EDF2F7"
    style={Object {}}
  >
    <Component
      className=""
      endColor="#A0AEC0"
      isLoaded={false}
      palette={
        Object {
          "backgroundColors": Object {
            "button": "#3fbaca",
            "common": "#ffffff",
            "disabledButton": "#e2e2e2",
            "main": "#f7f7f7",
            "secondaryToggle": "#ffffff",
            "toggle": "#425579",
          },
          "borderColors": Object {
            "common": "#e2e2e2",
          },
          "fontColors": Object {
            "anchor": "#3fbaca",
            "button": "#ffffff",
            "common": "#293346",
            "description": "#9d9d9d",
            "disabledAnchor": "#9d9d9d",
            "label": "#2d2d2d",
            "secondaryToggle": "#9d9d9d",
            "toggle": "#ffffff",
          },
        }
      }
      size="20px"
      speed={0.8}
      startColor="#EDF2F7"
      style={Object {}}
    >
      <StyledSkeletonCircle
        className=""
        endColor="#A0AEC0"
        isLoaded={false}
        palette={
          Object {
            "backgroundColors": Object {
              "button": "#3fbaca",
              "common": "#ffffff",
              "disabledButton": "#e2e2e2",
              "main": "#f7f7f7",
              "secondaryToggle": "#ffffff",
              "toggle": "#425579",
            },
            "borderColors": Object {
              "common": "#e2e2e2",
            },
            "fontColors": Object {
              "anchor": "#3fbaca",
              "button": "#ffffff",
              "common": "#293346",
              "description": "#9d9d9d",
              "disabledAnchor": "#9d9d9d",
              "label": "#2d2d2d",
              "secondaryToggle": "#9d9d9d",
              "toggle": "#ffffff",
            },
          }
        }
        size="20px"
        speed={0.8}
        startColor="#EDF2F7"
        style={Object {}}
      >
        <Box
          className="sc-gtssRu sc-hKFyIo bXZZG frPYgX"
          endColor="#A0AEC0"
          isLoaded={false}
          palette={
            Object {
              "backgroundColors": Object {
                "button": "#3fbaca",
                "common": "#ffffff",
                "disabledButton": "#e2e2e2",
                "main": "#f7f7f7",
                "secondaryToggle": "#ffffff",
                "toggle": "#425579",
              },
              "borderColors": Object {
                "common": "#e2e2e2",
              },
              "fontColors": Object {
                "anchor": "#3fbaca",
                "button": "#ffffff",
                "common": "#293346",
                "description": "#9d9d9d",
                "disabledAnchor": "#9d9d9d",
                "label": "#2d2d2d",
                "secondaryToggle": "#9d9d9d",
                "toggle": "#ffffff",
              },
            }
          }
          size="20px"
          speed={0.8}
          startColor="#EDF2F7"
          style={Object {}}
        >
          <Component
            className="sc-gtssRu sc-hKFyIo bXZZG frPYgX"
            endColor="#A0AEC0"
            isLoaded={false}
            palette={
              Object {
                "backgroundColors": Object {
                  "button": "#3fbaca",
                  "common": "#ffffff",
                  "disabledButton": "#e2e2e2",
                  "main": "#f7f7f7",
                  "secondaryToggle": "#ffffff",
                  "toggle": "#425579",
                },
                "borderColors": Object {
                  "common": "#e2e2e2",
                },
                "fontColors": Object {
                  "anchor": "#3fbaca",
                  "button": "#ffffff",
                  "common": "#293346",
                  "description": "#9d9d9d",
                  "disabledAnchor": "#9d9d9d",
                  "label": "#2d2d2d",
                  "secondaryToggle": "#9d9d9d",
                  "toggle": "#ffffff",
                },
              }
            }
            size="20px"
            speed={0.8}
            startColor="#EDF2F7"
            style={Object {}}
          >
            <StyledBox
              className="sc-gtssRu sc-hKFyIo bXZZG frPYgX"
              endColor="#A0AEC0"
              isLoaded={false}
              palette={
                Object {
                  "backgroundColors": Object {
                    "button": "#3fbaca",
                    "common": "#ffffff",
                    "disabledButton": "#e2e2e2",
                    "main": "#f7f7f7",
                    "secondaryToggle": "#ffffff",
                    "toggle": "#425579",
                  },
                  "borderColors": Object {
                    "common": "#e2e2e2",
                  },
                  "fontColors": Object {
                    "anchor": "#3fbaca",
                    "button": "#ffffff",
                    "common": "#293346",
                    "description": "#9d9d9d",
                    "disabledAnchor": "#9d9d9d",
                    "label": "#2d2d2d",
                    "secondaryToggle": "#9d9d9d",
                    "toggle": "#ffffff",
                  },
                }
              }
              size="20px"
              speed={0.8}
              startColor="#EDF2F7"
              style={Object {}}
            >
              <div
                className="sc-bdnylx sJSbd sc-gtssRu sc-hKFyIo bXZZG frPYgX"
                size="20px"
                speed={0.8}
                style={Object {}}
              />
            </StyledBox>
          </Component>
        </Box>
      </StyledSkeletonCircle>
    </Component>
  </WithMooskinContext>
</Skeleton>
`;

exports[`Skeleton renders SkeletonText correctly 1`] = `
<Skeleton
  className=""
  endColor="#A0AEC0"
  isLoaded={false}
  lines={4}
  speed={0.8}
  startColor="#EDF2F7"
  style={Object {}}
>
  <WithMooskinContext
    className=""
    endColor="#A0AEC0"
    isLoaded={false}
    key="0"
    lines={4}
    speed={0.8}
    startColor="#EDF2F7"
    style={Object {}}
    w="100%"
  >
    <Component
      className=""
      endColor="#A0AEC0"
      isLoaded={false}
      lines={4}
      palette={
        Object {
          "backgroundColors": Object {
            "button": "#3fbaca",
            "common": "#ffffff",
            "disabledButton": "#e2e2e2",
            "main": "#f7f7f7",
            "secondaryToggle": "#ffffff",
            "toggle": "#425579",
          },
          "borderColors": Object {
            "common": "#e2e2e2",
          },
          "fontColors": Object {
            "anchor": "#3fbaca",
            "button": "#ffffff",
            "common": "#293346",
            "description": "#9d9d9d",
            "disabledAnchor": "#9d9d9d",
            "label": "#2d2d2d",
            "secondaryToggle": "#9d9d9d",
            "toggle": "#ffffff",
          },
        }
      }
      speed={0.8}
      startColor="#EDF2F7"
      style={Object {}}
      w="100%"
    >
      <StyledSkeletonText
        className=""
        endColor="#A0AEC0"
        isLoaded={false}
        lines={4}
        palette={
          Object {
            "backgroundColors": Object {
              "button": "#3fbaca",
              "common": "#ffffff",
              "disabledButton": "#e2e2e2",
              "main": "#f7f7f7",
              "secondaryToggle": "#ffffff",
              "toggle": "#425579",
            },
            "borderColors": Object {
              "common": "#e2e2e2",
            },
            "fontColors": Object {
              "anchor": "#3fbaca",
              "button": "#ffffff",
              "common": "#293346",
              "description": "#9d9d9d",
              "disabledAnchor": "#9d9d9d",
              "label": "#2d2d2d",
              "secondaryToggle": "#9d9d9d",
              "toggle": "#ffffff",
            },
          }
        }
        speed={0.8}
        startColor="#EDF2F7"
        style={Object {}}
        w="100%"
      >
        <Box
          className="sc-gtssRu sc-eCApGN bXZZG kcBUaI"
          endColor="#A0AEC0"
          isLoaded={false}
          lines={4}
          palette={
            Object {
              "backgroundColors": Object {
                "button": "#3fbaca",
                "common": "#ffffff",
                "disabledButton": "#e2e2e2",
                "main": "#f7f7f7",
                "secondaryToggle": "#ffffff",
                "toggle": "#425579",
              },
              "borderColors": Object {
                "common": "#e2e2e2",
              },
              "fontColors": Object {
                "anchor": "#3fbaca",
                "button": "#ffffff",
                "common": "#293346",
                "description": "#9d9d9d",
                "disabledAnchor": "#9d9d9d",
                "label": "#2d2d2d",
                "secondaryToggle": "#9d9d9d",
                "toggle": "#ffffff",
              },
            }
          }
          speed={0.8}
          startColor="#EDF2F7"
          style={Object {}}
          w="100%"
        >
          <Component
            className="sc-gtssRu sc-eCApGN bXZZG kcBUaI"
            endColor="#A0AEC0"
            isLoaded={false}
            lines={4}
            palette={
              Object {
                "backgroundColors": Object {
                  "button": "#3fbaca",
                  "common": "#ffffff",
                  "disabledButton": "#e2e2e2",
                  "main": "#f7f7f7",
                  "secondaryToggle": "#ffffff",
                  "toggle": "#425579",
                },
                "borderColors": Object {
                  "common": "#e2e2e2",
                },
                "fontColors": Object {
                  "anchor": "#3fbaca",
                  "button": "#ffffff",
                  "common": "#293346",
                  "description": "#9d9d9d",
                  "disabledAnchor": "#9d9d9d",
                  "label": "#2d2d2d",
                  "secondaryToggle": "#9d9d9d",
                  "toggle": "#ffffff",
                },
              }
            }
            speed={0.8}
            startColor="#EDF2F7"
            style={Object {}}
            w="100%"
          >
            <StyledBox
              className="sc-gtssRu sc-eCApGN bXZZG kcBUaI"
              endColor="#A0AEC0"
              isLoaded={false}
              lines={4}
              palette={
                Object {
                  "backgroundColors": Object {
                    "button": "#3fbaca",
                    "common": "#ffffff",
                    "disabledButton": "#e2e2e2",
                    "main": "#f7f7f7",
                    "secondaryToggle": "#ffffff",
                    "toggle": "#425579",
                  },
                  "borderColors": Object {
                    "common": "#e2e2e2",
                  },
                  "fontColors": Object {
                    "anchor": "#3fbaca",
                    "button": "#ffffff",
                    "common": "#293346",
                    "description": "#9d9d9d",
                    "disabledAnchor": "#9d9d9d",
                    "label": "#2d2d2d",
                    "secondaryToggle": "#9d9d9d",
                    "toggle": "#ffffff",
                  },
                }
              }
              speed={0.8}
              startColor="#EDF2F7"
              style={Object {}}
              w="100%"
            >
              <div
                className="sc-bdnylx gChYHV sc-gtssRu sc-eCApGN bXZZG kcBUaI"
                speed={0.8}
                style={Object {}}
              />
            </StyledBox>
          </Component>
        </Box>
      </StyledSkeletonText>
    </Component>
  </WithMooskinContext>
  <WithMooskinContext
    className=""
    endColor="#A0AEC0"
    isLoaded={false}
    key="1"
    lines={4}
    speed={0.8}
    startColor="#EDF2F7"
    style={Object {}}
    w="100%"
  >
    <Component
      className=""
      endColor="#A0AEC0"
      isLoaded={false}
      lines={4}
      palette={
        Object {
          "backgroundColors": Object {
            "button": "#3fbaca",
            "common": "#ffffff",
            "disabledButton": "#e2e2e2",
            "main": "#f7f7f7",
            "secondaryToggle": "#ffffff",
            "toggle": "#425579",
          },
          "borderColors": Object {
            "common": "#e2e2e2",
          },
          "fontColors": Object {
            "anchor": "#3fbaca",
            "button": "#ffffff",
            "common": "#293346",
            "description": "#9d9d9d",
            "disabledAnchor": "#9d9d9d",
            "label": "#2d2d2d",
            "secondaryToggle": "#9d9d9d",
            "toggle": "#ffffff",
          },
        }
      }
      speed={0.8}
      startColor="#EDF2F7"
      style={Object {}}
      w="100%"
    >
      <StyledSkeletonText
        className=""
        endColor="#A0AEC0"
        isLoaded={false}
        lines={4}
        palette={
          Object {
            "backgroundColors": Object {
              "button": "#3fbaca",
              "common": "#ffffff",
              "disabledButton": "#e2e2e2",
              "main": "#f7f7f7",
              "secondaryToggle": "#ffffff",
              "toggle": "#425579",
            },
            "borderColors": Object {
              "common": "#e2e2e2",
            },
            "fontColors": Object {
              "anchor": "#3fbaca",
              "button": "#ffffff",
              "common": "#293346",
              "description": "#9d9d9d",
              "disabledAnchor": "#9d9d9d",
              "label": "#2d2d2d",
              "secondaryToggle": "#9d9d9d",
              "toggle": "#ffffff",
            },
          }
        }
        speed={0.8}
        startColor="#EDF2F7"
        style={Object {}}
        w="100%"
      >
        <Box
          className="sc-gtssRu sc-eCApGN bXZZG kcBUaI"
          endColor="#A0AEC0"
          isLoaded={false}
          lines={4}
          palette={
            Object {
              "backgroundColors": Object {
                "button": "#3fbaca",
                "common": "#ffffff",
                "disabledButton": "#e2e2e2",
                "main": "#f7f7f7",
                "secondaryToggle": "#ffffff",
                "toggle": "#425579",
              },
              "borderColors": Object {
                "common": "#e2e2e2",
              },
              "fontColors": Object {
                "anchor": "#3fbaca",
                "button": "#ffffff",
                "common": "#293346",
                "description": "#9d9d9d",
                "disabledAnchor": "#9d9d9d",
                "label": "#2d2d2d",
                "secondaryToggle": "#9d9d9d",
                "toggle": "#ffffff",
              },
            }
          }
          speed={0.8}
          startColor="#EDF2F7"
          style={Object {}}
          w="100%"
        >
          <Component
            className="sc-gtssRu sc-eCApGN bXZZG kcBUaI"
            endColor="#A0AEC0"
            isLoaded={false}
            lines={4}
            palette={
              Object {
                "backgroundColors": Object {
                  "button": "#3fbaca",
                  "common": "#ffffff",
                  "disabledButton": "#e2e2e2",
                  "main": "#f7f7f7",
                  "secondaryToggle": "#ffffff",
                  "toggle": "#425579",
                },
                "borderColors": Object {
                  "common": "#e2e2e2",
                },
                "fontColors": Object {
                  "anchor": "#3fbaca",
                  "button": "#ffffff",
                  "common": "#293346",
                  "description": "#9d9d9d",
                  "disabledAnchor": "#9d9d9d",
                  "label": "#2d2d2d",
                  "secondaryToggle": "#9d9d9d",
                  "toggle": "#ffffff",
                },
              }
            }
            speed={0.8}
            startColor="#EDF2F7"
            style={Object {}}
            w="100%"
          >
            <StyledBox
              className="sc-gtssRu sc-eCApGN bXZZG kcBUaI"
              endColor="#A0AEC0"
              isLoaded={false}
              lines={4}
              palette={
                Object {
                  "backgroundColors": Object {
                    "button": "#3fbaca",
                    "common": "#ffffff",
                    "disabledButton": "#e2e2e2",
                    "main": "#f7f7f7",
                    "secondaryToggle": "#ffffff",
                    "toggle": "#425579",
                  },
                  "borderColors": Object {
                    "common": "#e2e2e2",
                  },
                  "fontColors": Object {
                    "anchor": "#3fbaca",
                    "button": "#ffffff",
                    "common": "#293346",
                    "description": "#9d9d9d",
                    "disabledAnchor": "#9d9d9d",
                    "label": "#2d2d2d",
                    "secondaryToggle": "#9d9d9d",
                    "toggle": "#ffffff",
                  },
                }
              }
              speed={0.8}
              startColor="#EDF2F7"
              style={Object {}}
              w="100%"
            >
              <div
                className="sc-bdnylx gChYHV sc-gtssRu sc-eCApGN bXZZG kcBUaI"
                speed={0.8}
                style={Object {}}
              />
            </StyledBox>
          </Component>
        </Box>
      </StyledSkeletonText>
    </Component>
  </WithMooskinContext>
  <WithMooskinContext
    className=""
    endColor="#A0AEC0"
    isLoaded={false}
    key="2"
    lines={4}
    speed={0.8}
    startColor="#EDF2F7"
    style={Object {}}
    w="100%"
  >
    <Component
      className=""
      endColor="#A0AEC0"
      isLoaded={false}
      lines={4}
      palette={
        Object {
          "backgroundColors": Object {
            "button": "#3fbaca",
            "common": "#ffffff",
            "disabledButton": "#e2e2e2",
            "main": "#f7f7f7",
            "secondaryToggle": "#ffffff",
            "toggle": "#425579",
          },
          "borderColors": Object {
            "common": "#e2e2e2",
          },
          "fontColors": Object {
            "anchor": "#3fbaca",
            "button": "#ffffff",
            "common": "#293346",
            "description": "#9d9d9d",
            "disabledAnchor": "#9d9d9d",
            "label": "#2d2d2d",
            "secondaryToggle": "#9d9d9d",
            "toggle": "#ffffff",
          },
        }
      }
      speed={0.8}
      startColor="#EDF2F7"
      style={Object {}}
      w="100%"
    >
      <StyledSkeletonText
        className=""
        endColor="#A0AEC0"
        isLoaded={false}
        lines={4}
        palette={
          Object {
            "backgroundColors": Object {
              "button": "#3fbaca",
              "common": "#ffffff",
              "disabledButton": "#e2e2e2",
              "main": "#f7f7f7",
              "secondaryToggle": "#ffffff",
              "toggle": "#425579",
            },
            "borderColors": Object {
              "common": "#e2e2e2",
            },
            "fontColors": Object {
              "anchor": "#3fbaca",
              "button": "#ffffff",
              "common": "#293346",
              "description": "#9d9d9d",
              "disabledAnchor": "#9d9d9d",
              "label": "#2d2d2d",
              "secondaryToggle": "#9d9d9d",
              "toggle": "#ffffff",
            },
          }
        }
        speed={0.8}
        startColor="#EDF2F7"
        style={Object {}}
        w="100%"
      >
        <Box
          className="sc-gtssRu sc-eCApGN bXZZG kcBUaI"
          endColor="#A0AEC0"
          isLoaded={false}
          lines={4}
          palette={
            Object {
              "backgroundColors": Object {
                "button": "#3fbaca",
                "common": "#ffffff",
                "disabledButton": "#e2e2e2",
                "main": "#f7f7f7",
                "secondaryToggle": "#ffffff",
                "toggle": "#425579",
              },
              "borderColors": Object {
                "common": "#e2e2e2",
              },
              "fontColors": Object {
                "anchor": "#3fbaca",
                "button": "#ffffff",
                "common": "#293346",
                "description": "#9d9d9d",
                "disabledAnchor": "#9d9d9d",
                "label": "#2d2d2d",
                "secondaryToggle": "#9d9d9d",
                "toggle": "#ffffff",
              },
            }
          }
          speed={0.8}
          startColor="#EDF2F7"
          style={Object {}}
          w="100%"
        >
          <Component
            className="sc-gtssRu sc-eCApGN bXZZG kcBUaI"
            endColor="#A0AEC0"
            isLoaded={false}
            lines={4}
            palette={
              Object {
                "backgroundColors": Object {
                  "button": "#3fbaca",
                  "common": "#ffffff",
                  "disabledButton": "#e2e2e2",
                  "main": "#f7f7f7",
                  "secondaryToggle": "#ffffff",
                  "toggle": "#425579",
                },
                "borderColors": Object {
                  "common": "#e2e2e2",
                },
                "fontColors": Object {
                  "anchor": "#3fbaca",
                  "button": "#ffffff",
                  "common": "#293346",
                  "description": "#9d9d9d",
                  "disabledAnchor": "#9d9d9d",
                  "label": "#2d2d2d",
                  "secondaryToggle": "#9d9d9d",
                  "toggle": "#ffffff",
                },
              }
            }
            speed={0.8}
            startColor="#EDF2F7"
            style={Object {}}
            w="100%"
          >
            <StyledBox
              className="sc-gtssRu sc-eCApGN bXZZG kcBUaI"
              endColor="#A0AEC0"
              isLoaded={false}
              lines={4}
              palette={
                Object {
                  "backgroundColors": Object {
                    "button": "#3fbaca",
                    "common": "#ffffff",
                    "disabledButton": "#e2e2e2",
                    "main": "#f7f7f7",
                    "secondaryToggle": "#ffffff",
                    "toggle": "#425579",
                  },
                  "borderColors": Object {
                    "common": "#e2e2e2",
                  },
                  "fontColors": Object {
                    "anchor": "#3fbaca",
                    "button": "#ffffff",
                    "common": "#293346",
                    "description": "#9d9d9d",
                    "disabledAnchor": "#9d9d9d",
                    "label": "#2d2d2d",
                    "secondaryToggle": "#9d9d9d",
                    "toggle": "#ffffff",
                  },
                }
              }
              speed={0.8}
              startColor="#EDF2F7"
              style={Object {}}
              w="100%"
            >
              <div
                className="sc-bdnylx gChYHV sc-gtssRu sc-eCApGN bXZZG kcBUaI"
                speed={0.8}
                style={Object {}}
              />
            </StyledBox>
          </Component>
        </Box>
      </StyledSkeletonText>
    </Component>
  </WithMooskinContext>
  <WithMooskinContext
    className=""
    endColor="#A0AEC0"
    isLoaded={false}
    key="3"
    lines={4}
    speed={0.8}
    startColor="#EDF2F7"
    style={Object {}}
    w="80%"
  >
    <Component
      className=""
      endColor="#A0AEC0"
      isLoaded={false}
      lines={4}
      palette={
        Object {
          "backgroundColors": Object {
            "button": "#3fbaca",
            "common": "#ffffff",
            "disabledButton": "#e2e2e2",
            "main": "#f7f7f7",
            "secondaryToggle": "#ffffff",
            "toggle": "#425579",
          },
          "borderColors": Object {
            "common": "#e2e2e2",
          },
          "fontColors": Object {
            "anchor": "#3fbaca",
            "button": "#ffffff",
            "common": "#293346",
            "description": "#9d9d9d",
            "disabledAnchor": "#9d9d9d",
            "label": "#2d2d2d",
            "secondaryToggle": "#9d9d9d",
            "toggle": "#ffffff",
          },
        }
      }
      speed={0.8}
      startColor="#EDF2F7"
      style={Object {}}
      w="80%"
    >
      <StyledSkeletonText
        className=""
        endColor="#A0AEC0"
        isLoaded={false}
        lines={4}
        palette={
          Object {
            "backgroundColors": Object {
              "button": "#3fbaca",
              "common": "#ffffff",
              "disabledButton": "#e2e2e2",
              "main": "#f7f7f7",
              "secondaryToggle": "#ffffff",
              "toggle": "#425579",
            },
            "borderColors": Object {
              "common": "#e2e2e2",
            },
            "fontColors": Object {
              "anchor": "#3fbaca",
              "button": "#ffffff",
              "common": "#293346",
              "description": "#9d9d9d",
              "disabledAnchor": "#9d9d9d",
              "label": "#2d2d2d",
              "secondaryToggle": "#9d9d9d",
              "toggle": "#ffffff",
            },
          }
        }
        speed={0.8}
        startColor="#EDF2F7"
        style={Object {}}
        w="80%"
      >
        <Box
          className="sc-gtssRu sc-eCApGN bXZZG kcBUaI"
          endColor="#A0AEC0"
          isLoaded={false}
          lines={4}
          palette={
            Object {
              "backgroundColors": Object {
                "button": "#3fbaca",
                "common": "#ffffff",
                "disabledButton": "#e2e2e2",
                "main": "#f7f7f7",
                "secondaryToggle": "#ffffff",
                "toggle": "#425579",
              },
              "borderColors": Object {
                "common": "#e2e2e2",
              },
              "fontColors": Object {
                "anchor": "#3fbaca",
                "button": "#ffffff",
                "common": "#293346",
                "description": "#9d9d9d",
                "disabledAnchor": "#9d9d9d",
                "label": "#2d2d2d",
                "secondaryToggle": "#9d9d9d",
                "toggle": "#ffffff",
              },
            }
          }
          speed={0.8}
          startColor="#EDF2F7"
          style={Object {}}
          w="80%"
        >
          <Component
            className="sc-gtssRu sc-eCApGN bXZZG kcBUaI"
            endColor="#A0AEC0"
            isLoaded={false}
            lines={4}
            palette={
              Object {
                "backgroundColors": Object {
                  "button": "#3fbaca",
                  "common": "#ffffff",
                  "disabledButton": "#e2e2e2",
                  "main": "#f7f7f7",
                  "secondaryToggle": "#ffffff",
                  "toggle": "#425579",
                },
                "borderColors": Object {
                  "common": "#e2e2e2",
                },
                "fontColors": Object {
                  "anchor": "#3fbaca",
                  "button": "#ffffff",
                  "common": "#293346",
                  "description": "#9d9d9d",
                  "disabledAnchor": "#9d9d9d",
                  "label": "#2d2d2d",
                  "secondaryToggle": "#9d9d9d",
                  "toggle": "#ffffff",
                },
              }
            }
            speed={0.8}
            startColor="#EDF2F7"
            style={Object {}}
            w="80%"
          >
            <StyledBox
              className="sc-gtssRu sc-eCApGN bXZZG kcBUaI"
              endColor="#A0AEC0"
              isLoaded={false}
              lines={4}
              palette={
                Object {
                  "backgroundColors": Object {
                    "button": "#3fbaca",
                    "common": "#ffffff",
                    "disabledButton": "#e2e2e2",
                    "main": "#f7f7f7",
                    "secondaryToggle": "#ffffff",
                    "toggle": "#425579",
                  },
                  "borderColors": Object {
                    "common": "#e2e2e2",
                  },
                  "fontColors": Object {
                    "anchor": "#3fbaca",
                    "button": "#ffffff",
                    "common": "#293346",
                    "description": "#9d9d9d",
                    "disabledAnchor": "#9d9d9d",
                    "label": "#2d2d2d",
                    "secondaryToggle": "#9d9d9d",
                    "toggle": "#ffffff",
                  },
                }
              }
              speed={0.8}
              startColor="#EDF2F7"
              style={Object {}}
              w="80%"
            >
              <div
                className="sc-bdnylx HRCfw sc-gtssRu sc-eCApGN bXZZG kcBUaI"
                speed={0.8}
                style={Object {}}
              />
            </StyledBox>
          </Component>
        </Box>
      </StyledSkeletonText>
    </Component>
  </WithMooskinContext>
</Skeleton>
`;
